@@ -9,6 +9,9 @@ v0.9.13 (??.05.2011)
  * New base class for services tx_rnbase_sv1_Base
  * New view class for list views: tx_rnbase_views_List
  * util_SearchBase: method getWrapperClass is now public
+ * tx_rnbase_util_DB::getRecord() checks for TCA configuration of table
+ * tx_rnbase_configurations::get(): option $deep reimplemented. Should work now.
+ * SimpleMarker can render simple links configured by Typoscript
 
 v0.9.12 (02.05.2011)
  * model_base: Magic method __call implemented to support FLUID. Thanks to Stephan Reuther!
